--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "MERN API para MERN Tasks",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node .",
+    "dev": "nodemon ."
   },
   "author": "Erickowski",
   "license": "ISC",
